@@ -4,14 +4,16 @@ envlist =
     py36-django111
     py{36,37}-django21
     py{36,37,38,39}-django22
-    py{36,37,38,39}-django30
+    py{36,37,38,39}-django31
+    py{36,37,38,39}-django32
     py{38,39}-djangomain
-    
+
 [testenv]
 commands = {envpython} -Wa -b -m coverage run -m django test --settings=tests.settings
 deps =
     django22: Django>=2.2,<2.3
-    django30: Django>=3.0,<3.1
+    django31: Django~=3.1.0
+    django32: Django~=3.2.0
     djangomain: https://github.com/django/django/archive/main.tar.gz
     coverage
 
